--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,13 @@
         <version>5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.ning.billing</groupId>
+    <groupId>com.katalon</groupId>
     <artifactId>recurly-java-library</artifactId>
     <packaging>jar</packaging>
     <version>0.109.1-SNAPSHOT</version>
     <name>Recurly Java library</name>
     <description>Java library for Recurly</description>
-    <url>http://github.com/killbilling/recurly-java-library</url>
+    <url>https://github.com/katalon-studio/recurly-java-library</url>
     <inceptionYear>2012</inceptionYear>
     <licenses>
         <license>
@@ -58,13 +58,13 @@
         </developer>
     </developers>
     <scm>
-        <connection>scm:git:git://github.com/killbilling/recurly-java-library.git</connection>
-        <developerConnection>scm:git:git@github.com:killbilling/recurly-java-library.git</developerConnection>
-        <url>http://github.com/killbilling/recurly-java-library/tree/master</url>
+        <connection>scm:git:git://github.com/katalon-studio/recurly-java-library.git</connection>
+        <developerConnection>scm:git:git@github.com:katalon-studio/recurly-java-library.git</developerConnection>
+        <url>https://github.com/katalon-studio/recurly-java-library/tree/master</url>
     </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jackson.version>2.5.0</jackson.version>
+        <jackson.version>2.13.1</jackson.version>
         <guava.version>18.0</guava.version>
         <slf4j.version>1.7.10</slf4j.version>
     </properties>
@@ -623,6 +623,6 @@
     </mailingLists>
     <issueManagement>
         <system>Github</system>
-        <url>http://github.com/killbilling/recurly-java-library</url>
+        <url>https://github.com/katalon-studio/recurly-java-library</url>
     </issueManagement>
 </project>
